k8s/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
  namespace: mlens
  labels:
    app: mlens-api
spec:
  selector:
    app: fastapi
  ports:
    - name: http
      port: 8000
      targetPort: 8000
